--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -675,6 +675,7 @@
     <!-- Info Pane for non-editor users -->
     <div class="hidden" id="infoPane">
         <div id="infosidebar">
+            <div id="infopanecontent">
             <div class="shareeventcard" style="line-height:1.2;">
                 <div class="share-pfp"><img id="infocreatorpfp" alt=""></div>
                 <br>
@@ -706,6 +707,7 @@
                 <div id="qrcodecontainerdiv-info" style="border-radius: 20px; margin-bottom:20px; height: 180px; width:fit-content; max-width:75%; margin-top:-10px;">
                     <div id="qrcode-info" style="float: left; box-shadow: #ffffff 1px 1px 25px; padding-top: 15px; padding-left:20px; transform:scale(1.1)"></div>
                 </div>
+            </div>
             </div>
         </div>
     </div>
