--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -675,7 +675,13 @@
     <!-- Info Pane for non-editor users -->
     <div class="hidden" id="infoPane">
         <div id="infosidebar">
+                        <div id="infopreloader" style="text-align: center; padding: 20px; display: none;">
+                            <video autoplay loop muted style="width: 60px; height: 60px;">
+                                <source src="Preloader.mp4" type="video/mp4">
+                            </video>
+                        </div>
             <div id="infopanecontent">
+            
             <div class="shareeventcard" style="line-height:1.2;">
                 <div class="share-pfp"><img id="infocreatorpfp" alt=""></div>
                 <br>
