--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -676,7 +676,7 @@
     <div class="hidden" id="infoPane">
         <div id="infosidebar">
                         <div id="infopreloader" style="text-align: center; padding: 20px; display: none;">
-                            <video autoplay loop muted style="width: 60px; height: 60px;">
+                            <video autoplay loop muted style="width: calc(100vw * 0.10); height: calc(100vw * 0.10); border-radius: 2000000px;">
                                 <source src="Preloader.mp4" type="video/mp4">
                             </video>
                         </div>
