--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -675,7 +675,7 @@
     <!-- Info Pane for non-editor users -->
     <div class="hidden" id="infoPane">
         <div id="infosidebar">
-                        <div id="infopreloader" style="text-align: center; padding: 20px; display: none;">
+                        <div id="infopreloader" style="text-align: center; padding: 20px; display: none; margin-left:20px;">
                             <video autoplay loop muted style="width: calc(100vw * 0.10); height: calc(100vw * 0.10); border-radius: 2000000px;">
                                 <source src="Preloader.mp4" type="video/mp4">
                             </video>
