--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -691,7 +691,7 @@
                 <br>
                 <div id="infoclonecd">
                     <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">Clone to make your own changes</p>
-                    <a class="blackbtn" style="margin-top: 10px; margin-bottom: 7px;">
+                    <a class="blackbtn" style="margin-top: 10px; margin-bottom: 7px;" onclick="clonecountdown();">
                         <i class="fa-solid fa-clone"></i> Clone This Countdown
                     </a>
                 </div>
