added cloning tracebacks

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -685,7 +685,7 @@
             <div class="shareeventcard" style="line-height:1.2;">
                 <div class="share-pfp"><img id="infocreatorpfp" alt=""></div>
                 <br>
-                <p class="texttip" style="margin: 4px 0 0 0; line-height:1.2;">Created by</p>
+                <p class="texttip" style="margin: 4px 0 0 0; line-height:1.2;"><span id="infocreatedverb">Created</span> by</p>
                 <h2 id="infocreatorname" style="margin: 2px 0 0 0; line-height:1.2;"></h2>
                 <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">on <span id="infocreationdate"></span></p>
                 <br>
@@ -711,7 +711,7 @@
                 </button>
                 <p>QR Code</p>
                 <div id="qrcodecontainerdiv-info" style="border-radius: 20px; margin-bottom:20px; height: 180px; width:fit-content; max-width:75%; margin-top:-10px;">
-                    <div id="qrcode-info" style="float: left; box-shadow: #ffffff 1px 1px 25px; padding-top: 15px; padding-left:20px; transform:scale(1.1)"></div>
+                    <div id="qrcode-info" style="float: left; padding-top: 15px; padding-left:20px; transform:scale(1.1)"></div>
                 </div>
             </div>
             </div>
