--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -686,7 +686,7 @@
                 <div class="share-pfp"><img id="infocreatorpfp" alt=""></div>
                 <br>
                 <p class="texttip" style="margin: 4px 0 0 0; line-height:1.2;"><span id="infocreatedverb">Created</span> by</p>
-                <h2 style="margin: 2px 0 0 0; line-height:1.2;"><span id="infocreatorname"></span><i id="infocreatorverified" class="fa-solid fa-circle-check"></i></h2>
+                <h2 style="margin: 2px 0 0 0; line-height:1.2;"><span id="infocreatorname"></span><i style="margin-left:10px;" id="infocreatorverified" class="fa-solid fa-circle-check"></i></h2>
                 <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">on <span id="infocreationdate"></span></p>
                 <br>
                 <div id="infoclonecd">
