--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -704,6 +704,7 @@
                         <i class="fa-solid fa-right-to-bracket"></i> Sign Up for Free
                     </a>
                 </div>
+                <p id="officialtexttip" class="texttip" style="margin: 2px 0 0 0; line-height:1.2;"><i class="fa-solid fa-clock"></i> This Countdown is created by an official account</p>
             </div>
 
             <div id="sharingcenter-info">
