--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -54,7 +54,7 @@
         <div id="linksContainer" class="links-container">
         </div>
         <div class="onthisday-marquee">
-            <div class="marquee-label">On this day:</div>
+            <div class="marquee-label">On this day</div>
             <div class="marquee-viewport">
                 <div class="marquee-scroll">
                     <div id="onthisday"></div>
@@ -1283,7 +1283,7 @@ async function saveDashboardToCloud() {
                 } catch (error) {
                     console.error('[onthisday] Error fetching historical events:', error);
                     return [
-                        { year: 1776, text: "Unable to load today's historical events. Please check your internet connection.", category: 'Error' }
+                        { year: 404, text: "Unable to load today's historical events. Please check your internet connection.", category: 'Error' }
                     ];
                 }
             }
@@ -1297,8 +1297,8 @@ async function saveDashboardToCloud() {
                     }
                     const line = events
                         .map((ev) => `${ev.year}: ${ev.text}`)
-                        .join(' • ');
-                    const fullText = `${formatOnThisDayDate(today)} — ${line}`;
+                        .join('       |       ');
+                    const fullText = `                     ${line}`;
                     onThisDayElement.textContent = fullText;
                     onThisDayElement.setAttribute('data-content', fullText);
                 } catch (e) {
@@ -1309,6 +1309,20 @@ async function saveDashboardToCloud() {
             const today = new Date();
             fetchOnThisDayEvents(today.getMonth(), today.getDate())
                 .then((events) => renderOnThisDayMarquee(events, today))
+                .then(() => {
+                    // Force animation to start after content is loaded
+                    const marqueeScroll = document.querySelector('.marquee-scroll');
+                    if (marqueeScroll) {
+                        // Calculate appropriate animation duration based on text length
+                        const textLength = onThisDayElement.textContent.length;
+                        const baseSpeed = 0.08; // seconds per character
+                        const duration = Math.max(30, textLength * baseSpeed); // minimum 30 seconds
+                        
+                        marqueeScroll.style.animation = 'none';
+                        marqueeScroll.offsetHeight; // Trigger reflow
+                        marqueeScroll.style.animation = `onthisday-marquee ${duration}s linear infinite`;
+                    }
+                })
                 .catch((err) => {
                     console.error('[onthisday] Unexpected error:', err);
                     const errorText = `${formatOnThisDayDate(today)} — Unable to load today's historical events.`;
@@ -2079,10 +2093,10 @@ zoom:80%;
 .onthisday-marquee { display: flex; align-items: center; gap: 12px; padding: 10px 12px; border-radius: 12px; background: #8426ff2a; color:var(--mainforegroundcolor); overflow: hidden; }
         .onthisday-marquee .marquee-label { flex: 0 0 auto; font-family: 'Dosis', system-ui, -apple-system, Segoe UI, Roboto, sans-serif; font-weight: 600; opacity: 0.85; }
         .onthisday-marquee .marquee-viewport { position: relative; flex: 1 1 auto; overflow: hidden; min-height: 1.75em; display: flex; align-items: center; -webkit-mask-image: linear-gradient(to right, transparent 0, #000 24px, #000 calc(100% - 24px), transparent 100%); mask-image: linear-gradient(to right, transparent 0, #000 24px, #000 calc(100% - 24px), transparent 100%); -webkit-mask-size: 100% 100%; mask-size: 100% 100%; -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat; }
-        .onthisday-marquee .marquee-scroll { display: inline-block; white-space: nowrap; animation: onthisday-marquee 240s linear infinite; will-change: transform; line-height: 1.2; transform: translateY(2px); }
+        .onthisday-marquee .marquee-scroll { display: inline-block; white-space: nowrap; animation: onthisday-marquee 200s linear infinite; will-change: transform; line-height: 1.2; animation-play-state: running; }
         .onthisday-marquee .marquee-scroll::after { content: attr(data-content); position: absolute; left: 100%; margin-left: 50px; }
         .onthisday-marquee:hover .marquee-scroll { animation-play-state: paused; }
-        #onthisday { display: flex; align-items: center; height: 100%; }
+        #onthisday { display: flex; align-items: center; height: 100%; white-space: pre; }
         @keyframes onthisday-marquee { from { transform: translateX(0); } to { transform: translateX(-50%); } }
 </style>
 </html>
