--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -2090,7 +2090,7 @@ zoom:80%;
 }
 
 
-.onthisday-marquee { display: flex; align-items: center; gap: 12px; padding: 10px 12px; border-radius: 12px; background: #8426ff2a; color:var(--mainforegroundcolor); overflow: hidden; margin-top:20px;}
+.onthisday-marquee { display: flex; align-items: center; gap: 12px; padding: 10px 12px; border-radius: 12px; background: #8426ff2a; color:var(--mainforegroundcolor); overflow: hidden; margin-top:20px; box-shadow: 0 2px 15px rgba(0, 0, 0, 0.08), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);}
         .onthisday-marquee .marquee-label { flex: 0 0 auto; font-family: 'Dosis', system-ui, -apple-system, Segoe UI, Roboto, sans-serif; font-weight: 600; opacity: 0.85; }
         .onthisday-marquee .marquee-viewport { position: relative; flex: 1 1 auto; overflow: hidden; min-height: 1.75em; display: flex; align-items: center; -webkit-mask-image: linear-gradient(to right, transparent 0, #000 24px, #000 calc(100% - 24px), transparent 100%); mask-image: linear-gradient(to right, transparent 0, #000 24px, #000 calc(100% - 24px), transparent 100%); -webkit-mask-size: 100% 100%; mask-size: 100% 100%; -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat; }
         .onthisday-marquee .marquee-scroll { display: inline-block; white-space: nowrap; animation: onthisday-marquee 200s linear infinite; will-change: transform; line-height: 1.2; animation-play-state: running; }
