--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -2105,6 +2105,6 @@ zoom:80%;
         .onthisday-marquee .marquee-scroll::after { content: attr(data-content); position: absolute; left: 100%; margin-left: 50px; }
         .onthisday-marquee:hover .marquee-scroll { animation-play-state: paused; }
         #onthisday { display: flex; align-items: center; height: 100%; white-space: pre; }
-        @keyframes onthisday-marquee { from { transform: translateX(0); } to { transform: translateX(-50%); } }
+        @keyframes onthisday-marquee { from { transform: translateX(100%); } to { transform: translateX(-100%); } }
 </style>
 </html>
