--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -1239,7 +1239,7 @@ async function saveDashboardToCloud() {
 
             const isPositiveOnThisDayEvent = (text) => {
                 const negativeKeywords = [
-                    'died', 'death', 'killed', 'murdered', 'assassinated', 'executed', 'war', 'battle', 'bombing',
+                    'died', 'death', 'die', 'killed', 'murdered', 'assassinated', 'executed', 'war', 'battle', 'bombing',
                     'attack', 'invasion', 'siege', 'massacre', 'genocide', 'disaster', 'crash', 'sinking',
                     'earthquake', 'hurricane', 'fire', 'explosion', 'plague', 'pandemic', 'disease', 'famine',
                     'revolt', 'rebellion', 'coup', 'overthrow', 'prison', 'arrest', 'trial', 'sentenced',
