--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -2102,9 +2102,9 @@ zoom:80%;
         .onthisday-marquee .marquee-label { flex: 0 0 auto; font-family: 'Dosis', system-ui, -apple-system, Segoe UI, Roboto, sans-serif; font-weight: 600; opacity: 0.85; }
         .onthisday-marquee .marquee-viewport { position: relative; flex: 1 1 auto; overflow: hidden; min-height: 1.75em; display: flex; align-items: center; -webkit-mask-image: linear-gradient(to right, transparent 0, #000 24px, #000 calc(100% - 24px), transparent 100%); mask-image: linear-gradient(to right, transparent 0, #000 24px, #000 calc(100% - 24px), transparent 100%); -webkit-mask-size: 100% 100%; mask-size: 100% 100%; -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat; }
         .onthisday-marquee .marquee-scroll { display: inline-block; white-space: nowrap; animation: onthisday-marquee 200s linear infinite; will-change: transform; line-height: 1.2; animation-play-state: running; }
-        .onthisday-marquee .marquee-scroll::after { content: attr(data-content); position: absolute; left: 100%; white-space: pre; }
+        .onthisday-marquee .marquee-scroll::after { content: attr(data-content); position: absolute; left: 100%; margin-left: 100px; white-space: pre; }
         .onthisday-marquee:hover .marquee-scroll { animation-play-state: paused; }
         #onthisday { display: flex; align-items: center; height: 100%; white-space: pre; }
-        @keyframes onthisday-marquee { from { transform: translateX(0); } to { transform: translateX(-200%); } }
+        @keyframes onthisday-marquee { from { transform: translateX(0); } to { transform: translateX(-100%); } }
 </style>
 </html>
