--- a/mcacountdown/docs.html
+++ b/mcacountdown/docs.html
@@ -607,6 +607,8 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
             <p>Minutehand utilizes cookies and other similar technologies to enhance your experience and improve the website's functionality. Cookies are small files stored on your browser to save preferences, track usage, and gather analytical data. Here's how we use them:</p>
             <h2>Use of Cookies</h2>
             <p>We utilize cookies to save your accessibility settings and other personal options, which are only stored when enabled and deleted when disabled. Additionally, other local storage technologies are used to store more save data, such as Dashboards.</p>
+            <h2>On This Day</h2>
+            <p>The On This Day section of Dashboard uses data from Wikipedia and the Wikimedia Foundation, and said content may not reflect the views of Minutehand. We may modify the data we recieve to filter out results that may be considered sensitive to preserve the lighthearted nature, but do not modify the content of results you see. We do not send any user data to Wikipedia, Wikimedia, or any other party involved with On This Day. Wikipedia may collect anonymous data based on the requests we send them, according to their policies.</p>
             <h2>Cookie Duration</h2>
             <p>Settings cookies are saved for 70 days or until the setting is disabled. This allows us to remember a user's setting. Other technologies, like the ones we use to store Dashboards, may persist for a varying amount of time depending on the user's browser or other variables.</p>
             <h2>Managing Cookies</h2>
