--- a/mcacountdown/docs.html
+++ b/mcacountdown/docs.html
@@ -602,7 +602,7 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
             <h2>Data Security</h2>
             <p>All user data is stored securely using Supabase. We implement standard security practices to protect your information.</p>
             <h2>On This Day</h2>
-            <p>The On This Day section of Dashboard uses data from Wikipedia and the Wikimedia Foundation, and said content may not reflect the views of Minutehand. We may modify the data we recieve to filter out results that may be considered sensitive to preserve the lighthearted nature, but do not modify the content of results you see. We do not send any user data to Wikipedia, Wikimedia, or any other party involved with On This Day. Wikipedia may collect anonymous data based on the requests we send them, according to their policies.</p>
+            <p>The On This Day section of Dashboard uses data from Wikipedia, from the Wikimedia Foundation. Said content may not reflect the views of Minutehand. We may filter the data we recieve to preserve the lighthearted nature of our platform, but do not modify the content of results you see. Our filters may remove events that are flagged as sensitive. Our filters are not perfect nor human reviewed daily; if you encounter results that you believe should be filtered out, contact us. We do not send any user data to Wikipedia, Wikimedia, or any other party involved with On This Day. Wikipedia may collect anonymous data based on the requests we send them, according to their policies.</p>
             <br>
             <br>
             <h1>Cookie Policy</h1>
