--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -699,8 +699,8 @@
                     </a>
                 </div>
                 <div id="infosignup">
-                    <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2;">Sign up to make your own changes</p>
-                    <a class="blackbtn" href="https://michaeldors.com/mcacountdown/auth" style="margin-top: 10px; margin-bottom: 7px;">
+                    <p class="texttip" style="margin: 2px 0 0 0; line-height:1.2; text-align:center;">Sign up to make your own changes</p>
+                    <a class="blackbtn" href="https://michaeldors.com/mcacountdown/auth" style="margin-top: 10px; margin-bottom: 7px; margin-left:13px;">
                         <i class="fa-solid fa-right-to-bracket"></i> Sign Up for Free
                     </a>
                 </div>
