--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -704,7 +704,7 @@
                         <i class="fa-solid fa-right-to-bracket"></i> Sign Up for Free
                     </a>
                 </div>
-                <p id="officialtexttip" class="texttip" style="margin: 10px 0 10px 0; line-height:1.2; font-size:12px !important;"><i class="fa-solid fa-clock"></i> This Countdown is from an official account</p>
+                <p id="officialtexttip" class="texttip" style="margin: 20px 0 10px 0; line-height:1.2; font-size:12px !important;"><i class="fa-solid fa-circle-check"></i> This Countdown is from an official account</p>
             </div>
 
             <div id="sharingcenter-info">
