Update verification badge style in betatimer.html
Signed-off-by: Michael Dors <115369454+MichaelDors@users.noreply.github.com>

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -685,7 +685,7 @@
             <div class="shareeventcard" style="line-height:1.2;">
                 <div class="share-pfp-container">
                     <div class="share-pfp"><img id="infocreatorpfp" alt=""></div>
-                    <i id="infocreatorverified" class="fa-solid fa-circle-check verification-badge"></i>
+                    <i style="z-index:100000;" id="infocreatorverified" class="fa-solid fa-circle-check verification-badge"></i>
                 </div>
                 <br>
                 <p class="texttip" style="margin: 4px 0 0 0; line-height:1.2;"><span id="infocreatedverb">Created</span> by</p>
