Add icon to 'On this day' label in HTML
Signed-off-by: Michael Dors <115369454+MichaelDors@users.noreply.github.com>

--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -54,7 +54,7 @@
         <div id="linksContainer" class="links-container">
         </div>
         <div class="onthisday-marquee">
-            <div class="marquee-label">On this day</div>
+            <div class="marquee-label"><i class="fa-solid fa-earth-americas"></i> On this day</div>
             <div class="marquee-viewport">
                 <div class="marquee-scroll">
                     <div id="onthisday"></div>
