--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
             </h1>
         </div>
         <h1 style="font-weight:100">
-            <span data-aos="fade" data-aos-duration="400">DaVinci Resolve</span><span data-aos="fade" data-aos-duration="400">, Blender</span><span data-aos="fade" data-aos-duration="800">, Photoshop</span><span data-aos="fade" data-aos-duration="900">, Illustrator</span><span data-aos="fade" data-aos-duration="1000">, Some Premiere Pro</span><span data-aos="fade" data-aos-duration="1200">, and Some After Effects</span>
+            <span data-aos="fade" data-aos-duration="400">DaVinci Resolve</span><span data-aos="fade" data-aos-duration="400">, Blender</span><span data-aos="fade" data-aos-duration="800">, Photoshop</span><span data-aos="fade" data-aos-duration="900">, Illustrator</span><span data-aos="fade" data-aos-duration="1000">, Premiere Pro</span><span data-aos="fade" data-aos-duration="1200">, and After Effects</span>
         </h1>
         <br />
         <br />
@@ -81,7 +81,7 @@
             </h1>
         </div>
         <h1 style="font-weight:100">
-            <span data-aos="fade" data-aos-duration="400">HTML</span><span data-aos="fade" data-aos-duration="400">, CSS</span><span data-aos="fade" data-aos-duration="800">, JS</span><span data-aos="fade" data-aos-duration="1000">, Shortcuts</span><span data-aos="fade" data-aos-duration="1200">, some C#</span><span data-aos="fade" data-aos-duration="1400">, and some Python</span></h1>
+            <span data-aos="fade" data-aos-duration="400">HTML</span><span data-aos="fade" data-aos-duration="400">, CSS</span><span data-aos="fade" data-aos-duration="800">, JS</span><span data-aos="fade" data-aos-duration="1000">, Shortcuts</span><span data-aos="fade" data-aos-duration="1200">, C#</span><span data-aos="fade" data-aos-duration="1400">, and Python</span></h1>
         <br />
         <br />
         <a style="opacity: 0.25; cursor: not-allowed; display: none;" class="glowbutton">Related Projects [coming soon]</a>
