--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -81,6 +81,7 @@
             </div>
         </div>
         <h1 class="textelement" style="font-family: 'Dosis';">Your Countdowns</h1>
+        <div id="yourLinksContainer" class="links-container"></div>
         <h1 class="textelement" style="font-family: 'Dosis';">Shared With You</h1>
         <div style="margin-bottom:300px;"></div>
         <div class="input-container">
@@ -1027,7 +1028,13 @@ supabaseClient.auth.onAuthStateChange(async (_event, session) => {
         }).catch((err) => {
             console.error('[dashboard] AuthStateChange error:', err);
         });
-    } else {
+                // Also load user's own countdowns
+                try {
+                    await loadUserCountdowns(session.user.id);
+                } catch (e) {
+                    console.error('[dashboard] Failed to load user countdowns:', e);
+                }
+            } else {
         // User signed out
         console.log('[dashboard] User signed out');
         isInitialLoad = true; // Reset for next sign in
@@ -1195,6 +1202,56 @@ async function saveDashboardToCloud() {
             console.warn('[dashboard] No user, aborting cloud save');
             return;
         }
+        
+// Load countdowns created by the current user and render using same card format
+async function loadUserCountdowns(userId) {
+    try {
+        const { data, error } = await supabaseClient
+            .from('countdown')
+            .select('id, data, creator')
+            .eq('creator', userId);
+        if (error) {
+            console.error('[your-countdowns] Fetch error:', error);
+            return;
+        }
+        const container = document.getElementById('yourLinksContainer');
+        if (!container) return;
+        container.innerHTML = '';
+        (data || []).forEach((row, index) => {
+            // Expect countdown page to be at betatimer with id param
+            const url = `https://michaeldors.com/mcacountdown/betatimer?id=${encodeURIComponent(row.id)}`;
+            const title = extractTitleFromCountdown(row);
+            const card = document.createElement('div');
+            card.className = 'card';
+            card.setAttribute('data-index', index);
+            card.setAttribute('data-url', encodeURIComponent(url));
+            card.innerHTML = `
+            \t<iframe src="${url}${url.includes('?') ? '&' : '?'}cardmode=true" title="${title}" sandbox="allow-scripts allow-same-origin"></iframe>
+                <div class="card-content">
+                    <h3>${title}</h3>
+                    <i class="remove-button fa-solid fa-up-right-from-square" style="cursor:pointer;" onclick="event.stopPropagation(); window.open('${url}', '_blank');"></i>
+                </div>
+            `;
+            card.addEventListener('mousedown', dragStart);
+            container.appendChild(card);
+        });
+    } catch (e) {
+        console.error('[your-countdowns] Unexpected error:', e);
+    }
+}
+
+function extractTitleFromCountdown(row) {
+    try {
+        // Row may store JSON string or object in data column
+        const payload = typeof row.data === 'string' ? JSON.parse(row.data) : row.data || {};
+        // Try common title fields
+        const title = payload.title || payload.eventName || payload.name || payload.countdownTitle;
+        if (title && String(title).trim()) return String(title).trim();
+    } catch (e) {
+        // ignore
+    }
+    return 'Untitled Countdown';
+}
         const userId = user.id;
         const email = user.email;
         const name = user.user_metadata?.full_name;
