--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -1300,7 +1300,8 @@ async function saveDashboardToCloud() {
                     'attack', 'invasion', 'siege', 'massacre', 'genocide', 'disaster', 'crash', 'sinking',
                     'earthquake', 'hurricane', 'fire', 'explosion', 'plague', 'pandemic', 'disease', 'famine',
                     'revolt', 'rebellion', 'coup', 'overthrow', 'prison', 'arrest', 'trial', 'sentenced',
-                    'defeat', 'surrender', 'retreat', 'casualties', 'victims', 'tragedy', 'accident', 'bomb', 'gun'
+                    'defeat', 'surrender', 'retreat', 'casualties', 'victims', 'tragedy', 'accident', 'bomb', 'gun',
+                    'murder', 'killing', 'assassination', 'execution'
                 ];
                 const lowerText = String(text || '').toLowerCase();
                 return !negativeKeywords.some((keyword) => lowerText.includes(keyword));
